<resources>
    <string name="app_name" translatable="false">SavePhoto</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="instructions_title">SavePhoto Instructions</string>
    <string name="instructions_content">You may want to save photos you like when you browse through other applications. It\'s easy to save your favorite photos by sharing the photos you want to save in other applications and letting \"SavePhoto\" to receive the sharing. Or you want to save photos in JPEG format converted from HEIF format photos by album software provided by \"MIUI"\ system. Try this application to help you improve the sharing and saving experience of HEIF format photos in current Android environment.</string>
    <string name="open_source_title">Open source website</string>
    <string name="open_source_content" translatable="false">https://github.com/KRLHY/SavePhoto/</string>
    <string name="download_title">Official download website</string>
    <string name="download_content" translatable="false">https://www.coolapk.com/apk/com.kr.savephoto2/</string>
    <string name="about_title">About SavePhoto</string>
    <string name="about_content_copyright" translatable="false">Copyright &#169; All Rights Reserved.</string>
    <string name="about_content_designer" translatable="false">\"KR LHY\" Design, Create And Build This Application.</string>
    <string name="button_ok">OK</string>
    <string name="save_photo">Save Photo</string>
    <string name="photo_preview">Photo Preview</string>
    <string name="get_photo_error_title">Get the saved photo wrong......</string>
    <string name="get_photo_error_content">Sorry, there was an error in getting / parsing the shared photos. The received files may not be photos and will exit the program!</string>
    <string name="photo_saving_title">Saving......</string>
    <string name="photo_saving_content">The shared photo is saving, please wait to end.</string>
    <string name="save_photo_success_title">Save successfully.</string>
    <string name="save_photo_success_content">\"SavePhoto\" has successfully saved the photo.</string>
</resources>