<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SavePhotoInstructionsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/instructions_title"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewInstructionsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/instructions_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/textViewInstructionsContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/instructions_content"
        android:textColor="@color/text"
        android:textSize="@dimen/textSizeMedium"
        app:layout_constraintBottom_toTopOf="@+id/textViewOpenSourceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructionsTitle" />

    <TextView
        android:id="@+id/textViewOpenSourceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/open_source_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructionsContent" />

    <TextView
        android:id="@+id/textViewOpenSourceContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:autoLink="web"
        android:text="@string/open_source_content"
        android:textColor="@color/text"
        android:textSize="@dimen/textSizeMedium"
        app:layout_constraintBottom_toTopOf="@+id/textViewDownloadTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpenSourceTitle" />

    <TextView
        android:id="@+id/textViewDownloadTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/download_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpenSourceContent" />

    <TextView
        android:id="@+id/textViewDownloadContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:autoLink="web"
        android:text="@string/download_content"
        android:textColor="@color/text"
        android:textSize="@dimen/textSizeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDownloadTitle" />

    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginBottom="@dimen/textSizeSmall"
        android:text="@string/about_content_copyright"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textViewDesigner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDesigner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/about_content_designer"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>