<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/margin"
    tools:context=".SavePhotoMainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/buttonInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/instructions"
        android:textAlignment="viewStart"
        android:textAllCaps="@bool/buttonCaps"
        android:textSize="@dimen/textSizeMedium"
        app:icon="@drawable/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/about"
        android:textAlignment="viewStart"
        android:textAllCaps="@bool/buttonCaps"
        android:textSize="@dimen/textSizeMedium"
        app:icon="@drawable/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>